--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,8 @@
 
 buildscript {
     ext {
-        kotlin_version = '1.3.61'
+        kotlin_version = '1.4.31'
+//        kotlin_version = '1.3.61' old
 
         appcompat_version = '1.1.0'
         core_ktx_version = '1.2.0'
@@ -26,6 +27,7 @@ buildscript {
         dagger_version = "2.23.2"
         lifecycle_version = "2.2.0"
         coroutines_version = "1.3.3"
+//        coroutines_version = "1.6.1"
         rxjava_version = "2.2.17"
         rxandroid_version = "2.1.1"
         core_ktx_test_version = "1.2.0"
@@ -37,7 +39,8 @@ buildscript {
 
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.3'
+//        classpath 'com.android.tools.build:gradle:3.5.3' old
+        classpath 'com.android.tools.build:gradle:7.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
